[IMP] added changes in views.xml form view

--- a/views/views.xml
+++ b/views/views.xml
@@ -1,19 +1,37 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="academy.list">
-      <field name="name">academy list</field>
-      <field name="model">academy.academy</field>
+    <record model="ir.ui.view" id="course_list">
+      <field name="name">Course list</field>
+      <field name="model">course</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
         </tree>
       </field>
     </record>
-    -->
+
+    <record model="ir.ui.view" id="course_form">
+      <field name="name">Course form</field>
+      <field name="model">course</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <div class="oe_title"/>
+             <h3><label for="name" class="oe_edit_only"/></h3>
+             <h1><field name="name"/></h1>
+              <notebook>
+                <page string="Description">
+                 <group>                  
+                  <field name="description"/>
+                 </group>
+                </page>
+              </notebook>
+          </sheet>
+         </form>
+      </field>
+    </record>
+
 
     <!-- actions opening views on models -->
     <record model="ir.actions.act_window" id="act_course_tree">
