[IMP] added search view for courses model in views.xml

--- a/views/views.xml
+++ b/views/views.xml
@@ -32,6 +32,17 @@
       </field>
     </record>
 
+   <record model="ir.ui.view" id="course_search">
+      <field name="name">Course search</field>
+      <field name="model">course</field>
+      <field name="arch" type="xml">
+        <search>
+          <field name="name"/>
+          <field name="description"/>
+        </search>
+      </field>
+    </record>
+
 
     <!-- actions opening views on models -->
     <record model="ir.actions.act_window" id="act_course_tree">
