[IMP] added sessions model with action,menu and views

--- a/views/views.xml
+++ b/views/views.xml
@@ -79,5 +79,67 @@
     <menuitem name="Server to list" id="academy" parent="academy.menu_2"
               action="academy.action_server"/>
     -->
+
+    <!-- Session model definition -->
+    <!-- Action -->
+    <record model="ir.actions.act_window" id="act_session_tree">
+      <field name="name">Sessions</field>
+      <field name="res_model">session</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Menu-->
+    <menuitem name="Sessions" id="academy_sessions" parent="academy"
+    action="act_session_tree"/>
+    
+    <!-- Views -->
+
+    <record model="ir.ui.view" id="session_list">
+      <field name="name">Session list</field>
+      <field name="model">session</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="start_date"/>
+          <field name="seats"/>
+          <field name="duration"/>
+        </tree>
+      </field>
+    </record>
+
+    <record model="ir.ui.view" id="session_form">
+      <field name="name">Session form</field>
+      <field name="model">session</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <div class="oe_title"/>
+             <h3><label for="name" class="oe_edit_only"/></h3>
+             <h1><field name="name"/></h1>
+              <notebook>
+                <page string="Description">
+                 <group>
+                  <field name="start_date"/>
+                  <field name="seats"/>
+                  <field name="duration"/>
+                 </group>
+                </page>
+              </notebook>
+          </sheet>
+         </form>
+      </field>
+    </record>
+
+   <record model="ir.ui.view" id="session_search">
+      <field name="name">Session search</field>
+      <field name="model">session</field>
+      <field name="arch" type="xml">
+        <search>
+          <field name="name"/>
+          <field name="duration"/>
+        </search>
+      </field>
+    </record>
+
   </data>
 </odoo>
