--- a/views/views.xml
+++ b/views/views.xml
@@ -7,6 +7,7 @@
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
+          <field name="responsible"/>
         </tree>
       </field>
     </record>
@@ -22,7 +23,8 @@
              <h1><field name="name"/></h1>
               <notebook>
                 <page string="Description">
-                 <group>                  
+                 <group>
+                  <field name="responsible"/>
                   <field name="description"/>
                  </group>
                 </page>
@@ -100,6 +102,7 @@
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
+          <field name="instructor"/>
           <field name="start_date"/>
           <field name="seats"/>
           <field name="duration"/>
@@ -119,6 +122,7 @@
               <notebook>
                 <page string="Description">
                  <group>
+                  <field name="instructor"/>
                   <field name="start_date"/>
                   <field name="seats"/>
                   <field name="duration"/>
@@ -137,6 +141,7 @@
         <search>
           <field name="name"/>
           <field name="duration"/>
+          <field name="instructor"/>
         </search>
       </field>
     </record>
