--- a/views/views.xml
+++ b/views/views.xml
@@ -28,7 +28,15 @@
                   <field name="description"/>
                  </group>
                 </page>
-              </notebook>
+ 
+                <page string="Sessions">
+                 <group>
+                  <field nolabel="1" name="sessions"/>
+                 </group>
+                </page>
+
+
+             </notebook>
           </sheet>
          </form>
       </field>
@@ -103,6 +111,7 @@
         <tree>
           <field name="name"/>
           <field name="instructor"/>
+          <field name="course"/>
           <field name="start_date"/>
           <field name="seats"/>
           <field name="duration"/>
@@ -123,6 +132,7 @@
                 <page string="Description">
                  <group>
                   <field name="instructor"/>
+                  <field name="course"/>
                   <field name="start_date"/>
                   <field name="seats"/>
                   <field name="duration"/>
@@ -142,6 +152,7 @@
           <field name="name"/>
           <field name="duration"/>
           <field name="instructor"/>
+          <field name="course"/>
         </search>
       </field>
     </record>
