--- a/views/views.xml
+++ b/views/views.xml
@@ -17,6 +17,21 @@
       <field name="model">course</field>
       <field name="arch" type="xml">
         <form>
+          <header>
+            <button name="action_draft" type="object"
+                    string="Reset to draft"
+                    states="confirmed,done"/>
+            <button name="action_confirm" type="object"
+                    string="Confirm"
+                    states="draft"
+                    class="oe_highlight"/>
+            <button name="action_done" type="object"
+                    string="Mark to done"
+                    states="confirmed"
+                    class="oe_highlight"/>  
+            <field name="state" widget="statusbar"/>
+          </header>
+
           <sheet>
             <div class="oe_title"/>
              <h3><label for="name" class="oe_edit_only"/></h3>
